###
# This is a log of major user-visible changes in each MacPorts release.
# $Id$
###


Release 1.8.0 (unreleased):
    - Upgrade will no longer accept ports that are not installed (but it still
      installs new ports as dependencies if needed). In particular, this means
      that "port upgrade all" will no longer proceed to install every
      available port. (jmr in r46052)

    - Add several new options to port search (#15434, raimue)

    - Add xpkg archive type, xar-based format with XML. (afb)

    - Split portpkg creation out from portsubmit phase. (afb)

    - Make dependencies displayed in port info respect variants
      specified in variants.conf; collapse port deps to be an alias
      for port info with appropriate flags. Note this changes output
      format of port deps somewhat.  (#11891, gwhitney)

    - Make dependencies in port upgrade respect variants as specified
      (in order of precedence) on command line, latest installed
      version, or variants.conf .  (#8221, gwhitney)

    - Add mkdtemp Tcl command to create temporary directories. (#17181, perry)

    - Add select action, which integrates *_select tools into port.
      (#17477, perry)

    - The variants action additionally shows default variants, conflicting
      variants and variants' dependencies. (#14178, #15628, perry)

Release 1.7.1 (unreleased):
    - Add 'apple-gcc-4.2' option to configure.compiler (#18426, ryandesign)

    - Create ${applications_dir} and ${frameworks_dir} in destroot
      automatically (r45614, raimue)

    - Make the postflight procedure a bit smarter about which login files
      to update for bash and tcsh (#17588)

    - Add error messages to package installers when the wrong OS package
      is being installed (#13141)

Release 1.7.0 (2008-12-13 by blb):
    - Global variant descriptions using variant_descriptions.conf in the new
      resources directory in the ports tree (#14482, raimue)
